syntax = "proto3";
option java_multiple_files = true;
package tech.paulosalgado.grpc;
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/hello"
    };
  }
}
